@@ -290,6 +290,7 @@
 #include "IECorePython/EnvMapSHProjectorBinding.h"
 #include "IECorePython/LightBinding.h"
 #include "IECorePython/ContrastSmoothSkinningWeightsOpBinding.h"
+#include "IECorePython/CamelCaseBinding.h"
 #include "IECore/IECore.h"
 
 using namespace IECorePython;
@@ -578,6 +579,7 @@ BOOST_PYTHON_MODULE(_IECore)
 	bindCapturingRenderer();
 	bindLight();
 	bindContrastSmoothSkinningWeightsOp();
+	bindCamelCase();
 		
 	def( "majorVersion", &IECore::majorVersion );
 	def( "minorVersion", &IECore::minorVersion );
